* [shaper] upped library to version 1.2.0 to reflect changes.

* [shaper] added new client.lookup_by_woeid method which should be
  used instead of the now-deprecated lookup_location method.

* [shaper] use new Yahoo Weather API at 
  http://weather.yahooapis.com/forecastrss

* [shaper] shift xml parsing to use nokogiri rather than xml-simple.

* [shaper] shift from Response.image_url to Response.image which
  contains the new YahooWeather::Image record with the old image url
  plus more detail as now provided in the API response.

* [shaper] refactor for single class per file.

* [shaper] fix km/h unit speed in test.

= YAHOO_WEATHER_20091209_1_1_0

* [shaper] revise atmosphere.barometer to reflect tri-state as
  "steady", "rising", or "falling" via one of the new
  YahooWeather::Atmosphere::Barometer constants, whereas previously it
  was simply a boolean for whether rising.  Thanks to Andy Weber for
  suggestion.

= YAHOO_WEATHER_20091021_1_0_1

* [shaper] update documentation to reflect reality and use suffix for
  rdoc format.

* [shaper] move source repository to github.

* [shaper] use Hoe for Rakefile and gem management.

* [shaper] fix test warnings.

= 20061105

* [shaper] Initial version.