@@ -1,8 +1,18 @@
 CHANGELOG.rdoc
-README.rdoc
-Rakefile
-TODO
 examples/example.rb
 examples/get-weather.rb
+lib/yahoo-weather/astronomy.rb
+lib/yahoo-weather/atmosphere.rb
+lib/yahoo-weather/client.rb
+lib/yahoo-weather/condition.rb
+lib/yahoo-weather/forecast.rb
+lib/yahoo-weather/image.rb
+lib/yahoo-weather/location.rb
+lib/yahoo-weather/response.rb
+lib/yahoo-weather/units.rb
+lib/yahoo-weather/wind.rb
 lib/yahoo-weather.rb
+LICENSE
+Rakefile
+README.rdoc
 test/test_api.rb
